Fix problems with overflow

--- a/src/views/Speakers/Speakers.scss
+++ b/src/views/Speakers/Speakers.scss
@@ -1,8 +1,7 @@
 .swiper {
   width: 100%;
   height: 20rem;
-  overflow-x: auto !important;
-  // TODO: problemas con el overflow
+  overflow-x: hidden;
 }
 
 .swiper-slide {
